fixed hardware-efficient vqe, ready to test

--- a/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
+++ b/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "import qiskit.quantum_info as qi\n",
-    "from qi_utilities.algorithms.vqe import construct_hva_circuit\n",
+    "from qi_utilities.algorithms.vqe import construct_hva_circuit, hardware_efficient_vqe\n",
     "from qi_utilities.experiments.variational_eigensolver import ExecuteVQE\n",
     "from qiskit_quantuminspire.qi_provider import QIProvider\n",
     "\n",
@@ -94,13 +94,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db423925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
+    "                                        hamiltonian = hamiltonian_operator,\n",
+    "                                        repetitions = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34df1971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variational_qc.draw('mpl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8eb5bad0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "variational_qc = construct_hva_circuit(initial_state = '01',\n",
-    "                                         hamiltonian = hamiltonian_operator,\n",
-    "                                         repetitions = 1)\n",
+    "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
+    "                                        hamiltonian = hamiltonian_operator,\n",
+    "                                        repetitions = 0)\n",
     "\n",
     "ExecuteVQE(variational_qc=variational_qc,\n",
     "           hamiltonian=hamiltonian_operator,\n",
@@ -117,9 +139,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variational_qc = construct_hva_circuit(initial_state = '01',\n",
-    "                                         hamiltonian = hamiltonian_operator,\n",
-    "                                         repetitions = 2)\n",
+    "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
+    "                                        hamiltonian = hamiltonian_operator,\n",
+    "                                        repetitions = 1)\n",
     "\n",
     "ExecuteVQE(variational_qc=variational_qc,\n",
     "           hamiltonian=hamiltonian_operator,\n",
@@ -136,9 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variational_qc = construct_hva_circuit(initial_state = '01',\n",
-    "                                         hamiltonian = hamiltonian_operator,\n",
-    "                                         repetitions = 3)\n",
+    "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
+    "                                        hamiltonian = hamiltonian_operator,\n",
+    "                                        repetitions = 2)\n",
     "\n",
     "ExecuteVQE(variational_qc=variational_qc,\n",
     "           hamiltonian=hamiltonian_operator,\n",
@@ -147,6 +169,251 @@
     "           qubit_list=qubit_list,\n",
     "           basis_gates=superconducting_basis_gates)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5522af33",
+   "metadata": {},
+   "source": [
+    "# Additional testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a138117f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit import QuantumCircuit, transpile\n",
+    "from qi_utilities.utility_functions.readout_correction import apply_readout_circuit\n",
+    "from qi_utilities.utility_functions.data_handling import StoreProjectRecord\n",
+    "from qi_utilities.utility_functions.circuit_modifiers import prepare_initial_state, apply_pre_measurement_rotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6cec83f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is a 'theoretical' quantum circuit: the qubit number as well\n",
+    "# as the connectivity of the Tuna backend is being ignored\n",
+    "\n",
+    "qubit_0 = 0\n",
+    "qubit_1 = 1\n",
+    "qc = QuantumCircuit(2, 6, name=f'HVA_Ground_State')\n",
+    "\n",
+    "meas_idx = 0\n",
+    "for observable in ['XX', 'YY', 'ZZ']:\n",
+    "    qc = prepare_initial_state(qc, '11')\n",
+    "    qc.h(qubit_0)\n",
+    "    qc.cx(qubit_0, qubit_1)\n",
+    "    # qc.barrier()\n",
+    "    qc = apply_pre_measurement_rotations(qc, observable, [meas_idx, meas_idx+1])\n",
+    "    meas_idx += 2\n",
+    "\n",
+    "qc = apply_readout_circuit(qc, [qubit_0, qubit_1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a399601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qc.draw('mpl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35c91ccd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qubit_list = [0, 2]\n",
+    "qc_transpiled = transpile(qc, backend, initial_layout=qubit_list, basis_gates=superconducting_basis_gates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf77d642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qc_transpiled.draw('mpl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2a47247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nr_shots = backend.max_shots\n",
+    "job = backend.run(qc_transpiled, shots=nr_shots, memory = True) # NOTE: memory is set to True in order to return raw data!\n",
+    "result = job.result(timeout = 600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9570aac8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "StoreProjectRecord(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "602c207a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ae80376",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qi_utilities.utility_functions.readout_correction import (split_raw_shots, extract_ro_assignment_matrix, get_ro_corrected_multi_probs,\n",
+    "                                                               plot_ro_assignment_matrix)\n",
+    "from qi_utilities.utility_functions.raw_data_processing import get_multi_probs, get_multi_counts\n",
+    "\n",
+    "raw_data_shots, ro_mitigation_shots = split_raw_shots(result, qubit_list)\n",
+    "ro_assignment_matrix = extract_ro_assignment_matrix(ro_mitigation_shots, qubit_list)\n",
+    "\n",
+    "raw_data_counts = get_multi_counts(raw_data_shots, len(qubit_list))\n",
+    "raw_data_probs = get_multi_probs(raw_data_counts)\n",
+    "ro_corrected_probs = get_ro_corrected_multi_probs(raw_data_probs, ro_assignment_matrix, qubit_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c91d02d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_ro_assignment_matrix(ro_assignment_matrix, qubit_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "614ffbde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 4), dpi=300)\n",
+    "\n",
+    "bit_strings = [bit_string for bit_string in raw_data_probs[0]]\n",
+    "\n",
+    "ax.bar(bit_strings,\n",
+    "       [raw_data_probs[0][bit_string] for bit_string in raw_data_probs[0]],\n",
+    "       color='blue',\n",
+    "       label='Raw data',\n",
+    "       alpha=0.5, align='edge', width=-0.4)\n",
+    "ax.bar(bit_strings,\n",
+    "       [ro_corrected_probs[0][bit_string] for bit_string in ro_corrected_probs[0]],\n",
+    "       color='orange',\n",
+    "       label='Readout-error-mitigation data',\n",
+    "       align='edge', width=0.4)\n",
+    "\n",
+    "ax.set_xlabel(\"Bit strings\")\n",
+    "ax.set_ylabel(\"Probabilities\")\n",
+    "ax.set_title(f\"HVA ground state preparation\\n{backend_name} processor\\nQubits Q{qubit_list[0]} - Q{qubit_list[1]}\")\n",
+    "\n",
+    "ax.set_yticks([0.0, 0.25, 0.5, 0.75, 1.0])\n",
+    "ax.set_ylim(0.0, 1.05)\n",
+    "ax.legend()\n",
+    "\n",
+    "plt.grid(axis='y')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23079fa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ro_corrected_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9e42a77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qi_utilities.utility_functions.raw_data_processing import observable_expectation_values_Z_basis\n",
+    "\n",
+    "observable_expectation_values_Z_basis([ro_corrected_probs[2]], 'ZZ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2cc4b32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observable_expectation_values_Z_basis(ro_corrected_probs, 'ZZ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8f9a0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observable_expectation_values_Z_basis([ro_corrected_probs[2]], 'ZZ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd7ba452",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ro_corrected_probs[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac3c2ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ro_corrected_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff15f892",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
