Everything seems to be working

--- a/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
+++ b/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
@@ -114,6 +114,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e634966",
+   "metadata": {},
+   "source": [
+    "# 3. Overnight code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8eb5bad0",
@@ -129,7 +137,8 @@
     "           hamiltonian_units='a.u.',\n",
     "           backend=backend,\n",
     "           qubit_list=qubit_list,\n",
-    "           basis_gates=superconducting_basis_gates)"
+    "           basis_gates=superconducting_basis_gates,\n",
+    "           nr_shots = 2**16)"
    ]
   },
   {
@@ -143,12 +152,78 @@
     "                                        hamiltonian = hamiltonian_operator,\n",
     "                                        repetitions = 1)\n",
     "\n",
-    "ExecuteVQE(variational_qc=variational_qc,\n",
+    "execute = ExecuteVQE(variational_qc=variational_qc,\n",
     "           hamiltonian=hamiltonian_operator,\n",
     "           hamiltonian_units='a.u.',\n",
     "           backend=backend,\n",
     "           qubit_list=qubit_list,\n",
-    "           basis_gates=superconducting_basis_gates)"
+    "           basis_gates=superconducting_basis_gates,\n",
+    "           nr_shots = 2**14,\n",
+    "           spsa_maxiter=2,\n",
+    "           cost_function_lower_bound=-8.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15bd8e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
+    "                                        hamiltonian = hamiltonian_operator,\n",
+    "                                        repetitions = 1)\n",
+    "\n",
+    "execute = ExecuteVQE(variational_qc=variational_qc,\n",
+    "           hamiltonian=hamiltonian_operator,\n",
+    "           hamiltonian_units='a.u.',\n",
+    "           backend=backend,\n",
+    "           qubit_list=qubit_list,\n",
+    "           basis_gates=superconducting_basis_gates,\n",
+    "           nr_shots = 2**16,\n",
+    "           maxiter = 125)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b06e99fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execute.result.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63c6fb13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execute.result.fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f59e932a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execute.ax.scatter([2*execute.maxiter+1], [execute.result.fun], alpha=1.0, color='green')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f23a9d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execute.fig.show()\n",
+    "execute.fig.canvas.draw()\n",
+    "execute.fig.canvas.flush_events()"
    ]
   },
   {
@@ -418,7 +493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "quantuminspire",
+   "display_name": "quantuminspire_new",
    "language": "python",
    "name": "python3"
   },
