Good point for checkpoint

--- a/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
+++ b/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
@@ -132,13 +132,13 @@
     "                                        hamiltonian = hamiltonian_operator,\n",
     "                                        repetitions = 0)\n",
     "\n",
-    "ExecuteVQE(variational_qc=variational_qc,\n",
+    "execute = ExecuteVQE(variational_qc=variational_qc,\n",
     "           hamiltonian=hamiltonian_operator,\n",
     "           hamiltonian_units='a.u.',\n",
     "           backend=backend,\n",
     "           qubit_list=qubit_list,\n",
     "           basis_gates=superconducting_basis_gates,\n",
-    "           nr_shots = 2**16)"
+    "           nr_shots = 2**14)"
    ]
   },
   {
@@ -158,9 +158,7 @@
     "           backend=backend,\n",
     "           qubit_list=qubit_list,\n",
     "           basis_gates=superconducting_basis_gates,\n",
-    "           nr_shots = 2**14,\n",
-    "           spsa_maxiter=2,\n",
-    "           cost_function_lower_bound=-8.0)"
+    "           nr_shots = 2**14)"
    ]
   },
   {
@@ -172,7 +170,7 @@
    "source": [
     "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
     "                                        hamiltonian = hamiltonian_operator,\n",
-    "                                        repetitions = 1)\n",
+    "                                        repetitions = 2)\n",
     "\n",
     "execute = ExecuteVQE(variational_qc=variational_qc,\n",
     "           hamiltonian=hamiltonian_operator,\n",
@@ -180,69 +178,7 @@
     "           backend=backend,\n",
     "           qubit_list=qubit_list,\n",
     "           basis_gates=superconducting_basis_gates,\n",
-    "           nr_shots = 2**16,\n",
-    "           maxiter = 125)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b06e99fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "execute.result.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63c6fb13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "execute.result.fun"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f59e932a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "execute.ax.scatter([2*execute.maxiter+1], [execute.result.fun], alpha=1.0, color='green')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f23a9d1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "execute.fig.show()\n",
-    "execute.fig.canvas.draw()\n",
-    "execute.fig.canvas.flush_events()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75abf531",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
-    "                                        hamiltonian = hamiltonian_operator,\n",
-    "                                        repetitions = 2)\n",
-    "\n",
-    "ExecuteVQE(variational_qc=variational_qc,\n",
-    "           hamiltonian=hamiltonian_operator,\n",
-    "           hamiltonian_units='a.u.',\n",
-    "           backend=backend,\n",
-    "           qubit_list=qubit_list,\n",
-    "           basis_gates=superconducting_basis_gates)"
+    "           nr_shots = 2**14)"
    ]
   },
   {
