--- a/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
+++ b/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
@@ -80,15 +80,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nr_qubits = 2\n",
+    "nr_qubits = 4\n",
     "J = 1 # in arbitrary units\n",
+    "B = 1 # in arbitrary units\n",
     "\n",
-    "pauli_terms = ['XX', 'YY', 'ZZ']\n",
+    "pauli_terms = ['IIXX',\n",
+    "               'IIYY',\n",
+    "               'IIZZ']\n",
+    "               \n",
+    "            #    'IXXI',\n",
+    "            #    'IYYI',\n",
+    "            #    'IZZI',\n",
+    "               \n",
+    "            #    'XXII',\n",
+    "            #    'YYII',\n",
+    "            #    'ZZII',\n",
+    "               \n",
+    "            #    'XIIX',\n",
+    "            #    'YIIY',\n",
+    "            #    'ZIIZ',\n",
+    "               \n",
+    "            #    'IIIZ',\n",
+    "            #    'IIZI',\n",
+    "            #    'IZII',\n",
+    "            #    'ZIII']\n",
     "pauli_coefficients = [J, J, J]\n",
+    "                    #   J, J, J,\n",
+    "                    #   J, J, J,\n",
+    "                    #   J, J, J,\n",
+    "                      \n",
+    "                    #   B, B, B, B]\n",
     "hamiltonian_operator = qi.SparsePauliOp(pauli_terms, pauli_coefficients)\n",
     "\n",
     "superconducting_basis_gates = ['id', 'z', 's', 'sdg', 't', 'tdg', 'x', 'rx', 'y', 'ry', 'cz', 'delay', 'reset']\n",
-    "qubit_list = [0, 2]"
+    "qubit_list = [0, 2, 4, 1]"
    ]
   },
   {
@@ -100,7 +125,7 @@
    "source": [
     "variational_qc = hardware_efficient_vqe(nr_qubits = nr_qubits,\n",
     "                                        hamiltonian = hamiltonian_operator,\n",
-    "                                        repetitions = 1)"
+    "                                        repetitions = 0)"
    ]
   },
   {
@@ -139,6 +164,20 @@
     "           qubit_list=qubit_list,\n",
     "           basis_gates=superconducting_basis_gates,\n",
     "           nr_shots = 2**14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96412bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qi_utilities.utility_functions.readout_correction import measure_ro_assignment_matrix\n",
+    "\n",
+    "ro_assignment_matrix = measure_ro_assignment_matrix(backend,\n",
+    "                                                         qubit_list,\n",
+    "                                                         2**14)"
    ]
   },
   {
@@ -214,10 +253,10 @@
     "\n",
     "qubit_0 = 0\n",
     "qubit_1 = 1\n",
-    "qc = QuantumCircuit(2, 6, name=f'HVA_Ground_State')\n",
+    "qc = QuantumCircuit(2, 12, name=f'HVA_Ground_State')\n",
     "\n",
     "meas_idx = 0\n",
-    "for observable in ['XX', 'YY', 'ZZ']:\n",
+    "for observable in ['IIXX', 'IIYY', 'IIZZ']:\n",
     "    qc = prepare_initial_state(qc, '11')\n",
     "    qc.h(qubit_0)\n",
     "    qc.cx(qubit_0, qubit_1)\n",
@@ -429,7 +468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "quantuminspire_new",
+   "display_name": "quantuminspire",
    "language": "python",
    "name": "python3"
   },
