--- a/qi_utilities/notebook_guides/0.0_getting_started_tuna_devices.ipynb
+++ b/qi_utilities/notebook_guides/0.0_getting_started_tuna_devices.ipynb
@@ -686,15 +686,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = '20260119_160101' # enter the project timestamp in the format 'YYYYMMDD_HHMMSS'\n",
-    "project_name = 'Bell_State_Q0_Q2' # enter the project name\n",
     "job_id = '346233' # enter the Job ID\n",
     "\n",
-    "loaded_result = RetrieveProjectRecord(timestamp, project_name, job_id)"
+    "loaded_result = RetrieveProjectRecord(job_id)"
    ]
   },
   {
@@ -989,15 +987,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = '20260119_160302'\n",
-    "project_name = 'Bell_State'\n",
     "job_id = '346234'\n",
     "\n",
-    "loaded_result = RetrieveProjectRecord(timestamp, project_name, job_id)"
+    "loaded_result = RetrieveProjectRecord(job_id)"
    ]
   },
   {
