--- a/qi_utilities/notebook_guides/0.0_getting_started_tuna_devices.ipynb
+++ b/qi_utilities/notebook_guides/0.0_getting_started_tuna_devices.ipynb
@@ -1004,65 +1004,83 @@
    "source": [
     "starmon_7_specs = {\n",
     "    'Qubits':{\n",
-    "        'NW': {'frequency': 6.251e9, # in [Hz] units\n",
-    "        'T1': 25.0e-6, # in [s] units\n",
-    "        'RB error': 0.0017,\n",
-    "        'SSRO': {\n",
-    "            'p0given1': 0.0231,\n",
-    "            'p1given0': 0.0043\n",
-    "        }},\n",
-    "        'W': {'frequency': 5.590e9, # in [Hz] units\n",
-    "            'T1': 24.0e-6, # in [s] units\n",
-    "            't_since_event': 1.0, # in [s] units\n",
-    "            'RB error': 0.0031,\n",
+    "        'Q0': {\n",
+    "            'Frequency [Hz]': 6.251e9,\n",
+    "            'T1 [s]': 27.8e-6,\n",
+    "            'T2 [s]': 11.3e-6,\n",
+    "            'RB error': 6.614e-4,\n",
     "            'SSRO': {\n",
-    "                'p0given1': 0.0393,\n",
-    "                'p1given0': 0.0102\n",
+    "                'p0given1': 0.0334,\n",
+    "                'p1given0': 0.0049\n",
     "            }},\n",
-    "        'NE': {'frequency': 6.227e9, # in [Hz] units\n",
-    "            'T1': 17.0e-6, # in [s] units\n",
-    "            'RB error': 0.0020,\n",
+    "        'Q1': {\n",
+    "            'Frequency [Hz]': 6.227e9,\n",
+    "            'T1 [s]': 11.9e-6,\n",
+    "            'T2 [s]': 6.5e-6,\n",
+    "            'RB error': 8.72e-4,\n",
     "            'SSRO': {\n",
-    "                'p0given1': 0.0250,\n",
+    "                'p0given1': 0.0226,\n",
     "                'p1given0': 0.0024\n",
     "            }},\n",
-    "        'C': {'frequency': 5.757e9, # in [Hz] units\n",
-    "            'T1': 21.0e-6, # in [s] units\n",
-    "            't_since_event': 1.0, # in [s] units\n",
-    "            'RB error': 0.0029,\n",
+    "        'Q2': {\n",
+    "            'Frequency [Hz]': 5.590e9,\n",
+    "            'T1 [s]': 26.0e-6,\n",
+    "            'T2 [s]': 4.9e-6,\n",
+    "            'RB error': 0.00167,\n",
     "            'SSRO': {\n",
-    "                'p0given1': 0.0561,\n",
-    "                'p1given0': 0.0278\n",
+    "                'p0given1': 0.0179,\n",
+    "                'p1given0': 0.0111\n",
     "            }},\n",
-    "        'E': {'frequency': 5.753e9, # in [Hz] units\n",
-    "            'T1': 19.0e-6, # in [s] units\n",
-    "            't_since_event': 1.0, # in [s] units\n",
-    "            'RB error': 0.0053,\n",
+    "        'Q3': {\n",
+    "            'Frequency [Hz]': 5.757e9,\n",
+    "            'T1 [s]': 26.2e-6,\n",
+    "            'T2 [s]': 13.1e-6,\n",
+    "            'RB error': 0.00167,\n",
     "            'SSRO': {\n",
-    "                'p0given1': 0.0720,\n",
-    "                'p1given0': 0.0291\n",
+    "                'p0given1': 0.0521,\n",
+    "                'p1given0': 0.0327\n",
     "            }},\n",
-    "        'SW': {'frequency': 4.484e9, # in [Hz] units\n",
-    "            'T1': 38.0e-6, # in [s] units\n",
-    "            'RB error': 0.0011,\n",
+    "        'Q4': {\n",
+    "            'Frequency [Hz]': 5.753e9,\n",
+    "            'T1 [s]': 25.6e-6,\n",
+    "            'T2 [s]': 15.2e-6,\n",
+    "            'RB error': 0.00128,\n",
     "            'SSRO': {\n",
-    "                'p0given1': 0.0215,\n",
-    "                'p1given0': 0.0230\n",
+    "                'p0given1': 0.0553,\n",
+    "                'p1given0': 0.0212\n",
     "            }},\n",
-    "        'SE': {'frequency': 4.659e9, # in [Hz] units\n",
-    "            'T1': 31.0e-6, # in [s] units\n",
-    "            'RB error': 0.0018,\n",
+    "        'Q5': {\n",
+    "            'Frequency [Hz]': 4.484e9,\n",
+    "            'T1 [s]': 38.6e-6,\n",
+    "            'T2 [s]': 2.6e-6,\n",
+    "            'RB error': 4.7e-4,\n",
     "            'SSRO': {\n",
-    "                'p0given1': 0.0330,\n",
-    "                'p1given0': 0.0868\n",
+    "                'p0given1': 0.0507,\n",
+    "                'p1given0': 0.0541\n",
+    "            }},\n",
+    "        'Q6': {\n",
+    "            'Frequency [Hz]': 4.659e9,\n",
+    "            'T1 [s]': 36.9e-6,\n",
+    "            'T2 [s]': 4.7e-6,\n",
+    "            'RB error': 4.7e-4,\n",
+    "            'SSRO': {\n",
+    "                'p0given1': 0.0244,\n",
+    "                'p1given0': 0.0571\n",
     "            }}\n",
     "    },\n",
     "    'CZ IRB errors':{\n",
-    "        'Q0-Q2': 0.01,\n",
+    "        'Q0-Q2': 0.0171,\n",
+    "        'Q0-Q3': 0.0167,\n",
+    "        'Q1-Q3': 0.0097,\n",
+    "        'Q1-Q4': 0.0188,\n",
+    "        'Q2-Q5': 0.0212,\n",
+    "        'Q3-Q5': 0.0242,\n",
+    "        'Q3-Q6': 0.0157,\n",
+    "        'Q4-Q6': 0.0124\n",
     "    },\n",
-    "    'delay_duration [s]': 20e-9,\n",
-    "    'base_temperature [K]': 40e-3,\n",
-    "    'measurement_duration [s]': 1.0e-6\n",
+    "    'Measurement duration [s]': 1.0e-6,\n",
+    "    'Delay duration [s]': 20e-9,\n",
+    "    'Base temperature [K]': 40e-3\n",
     "}"
    ]
   },
@@ -1332,12 +1350,15 @@
     "    CZ_list = list(processor_specs['CZ IRB errors'])\n",
     "    \n",
     "    simulator_noise_model = noise.NoiseModel()\n",
+    "    \n",
     "    for qubit_idx in range(len(qubit_list)):\n",
-    "        depolarization_noise_x = noise.kraus_error(depolarization_channel(processor_specs[qubit_list[qubit_idx]]['RB_simple_error']))\n",
-    "        relaxation_noise_wait_time = noise.kraus_error(relaxation_channel(temperature=temperature,\n",
+    "        relaxation_noise = noise.kraus_error(relaxation_channel(temperature=processor_specs['Base temperature [K]'],\n",
     "                                                                qubit_freq=processor_specs[qubit_list[qubit_idx]]['frequency'],\n",
     "                                                                qubit_T1=processor_specs[qubit_list[qubit_idx]]['T1_eff'],\n",
     "                                                                time_interval=wait_time))\n",
+    "        \n",
+    "        \n",
+    "        depolarization_noise_x = noise.kraus_error(depolarization_channel(processor_specs[qubit_list[qubit_idx]]['RB_simple_error']))\n",
     "        readout_error = noise.ReadoutError([[1 - processor_specs[qubit_list[qubit_idx]]['SSRO']['p1given0'],\n",
     "                                             processor_specs[qubit_list[qubit_idx]]['SSRO']['p1given0']],\n",
     "                                             [processor_specs[qubit_list[qubit_idx]]['SSRO']['p0given1'],\n",
