--- a/qi_utilities/notebook_guides/0.0_getting_started_tuna_devices.ipynb
+++ b/qi_utilities/notebook_guides/0.0_getting_started_tuna_devices.ipynb
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,19 +1069,20 @@
     "            }}\n",
     "    },\n",
     "    'CZ IRB errors':{\n",
-    "        'Q0-Q2': 0.0171,\n",
-    "        'Q0-Q3': 0.0167,\n",
-    "        'Q1-Q3': 0.0097,\n",
-    "        'Q1-Q4': 0.0188,\n",
-    "        'Q2-Q5': 0.0212,\n",
-    "        'Q3-Q5': 0.0242,\n",
-    "        'Q3-Q6': 0.0157,\n",
-    "        'Q4-Q6': 0.0124\n",
+    "        '[0, 2]': 0.0171,\n",
+    "        '[0, 3]': 0.0167,\n",
+    "        '[1, 3]': 0.0097,\n",
+    "        '[1, 4]': 0.0188,\n",
+    "        '[2, 5]': 0.0212,\n",
+    "        '[3, 5]': 0.0242,\n",
+    "        '[3, 6]': 0.0157,\n",
+    "        '[4, 6]': 0.0124\n",
     "    },\n",
     "    'Measurement duration [s]': 1.0e-6,\n",
     "    'Delay duration [s]': 20e-9,\n",
-    "    'Base temperature [K]': 40e-3\n",
-    "}"
+    "    'Base temperature [K]': 40e-3,\n",
+    "    'Native operations': ['id', 's', 'sdg', 't', 'tdg', 'x', 'rx', 'y', 'ry', 'z', 'cz', 'delay', 'reset', 'measure']\n",
+    "}\n"
    ]
   },
   {
@@ -1301,6 +1302,8 @@
     "from qiskit_aer import noise\n",
     "from scipy.constants import Planck, Boltzmann\n",
     "from qiskit.quantum_info import Pauli, pauli_basis\n",
+    "import ast\n",
+    "\n",
     "\n",
     "def relaxation_channel(temperature, qubit_freq, qubit_T1, time_interval):\n",
     "    kraus_op = []\n",
@@ -1346,29 +1349,75 @@
     "\n",
     "def create_noise_model(processor_specs: dict):\n",
     "    \n",
+    "    n_g = 1.875\n",
+    "    n_CZ = 1.5\n",
+    "    \n",
     "    qubit_list = list(processor_specs['Qubits'])\n",
     "    CZ_list = list(processor_specs['CZ IRB errors'])\n",
     "    \n",
     "    simulator_noise_model = noise.NoiseModel()\n",
     "    \n",
     "    for qubit_idx in range(len(qubit_list)):\n",
-    "        relaxation_noise = noise.kraus_error(relaxation_channel(temperature=processor_specs['Base temperature [K]'],\n",
-    "                                                                qubit_freq=processor_specs[qubit_list[qubit_idx]]['frequency'],\n",
-    "                                                                qubit_T1=processor_specs[qubit_list[qubit_idx]]['T1_eff'],\n",
-    "                                                                time_interval=wait_time))\n",
     "        \n",
+    "        relaxation_noise_delay = noise.kraus_error(relaxation_channel(temperature = processor_specs['Base temperature [K]'],\n",
+    "                                                                      qubit_freq = processor_specs['Qubits'][qubit_list[qubit_idx]]['Frequency [Hz]'],\n",
+    "                                                                      qubit_T1 = processor_specs['Qubits'][qubit_list[qubit_idx]]['T1 [s]'],\n",
+    "                                                                      time_interval = processor_specs['Delay duration [s]']))\n",
+    "        dephasing_noise_delay = noise.kraus_error(dephasing_channel(qubit_T2 = processor_specs['Qubits'][qubit_list[qubit_idx]]['T2 [s]'],\n",
+    "                                                                    time_interval = processor_specs['Delay duration [s]']))\n",
     "        \n",
-    "        depolarization_noise_x = noise.kraus_error(depolarization_channel(processor_specs[qubit_list[qubit_idx]]['RB_simple_error']))\n",
-    "        readout_error = noise.ReadoutError([[1 - processor_specs[qubit_list[qubit_idx]]['SSRO']['p1given0'],\n",
-    "                                             processor_specs[qubit_list[qubit_idx]]['SSRO']['p1given0']],\n",
-    "                                             [processor_specs[qubit_list[qubit_idx]]['SSRO']['p0given1'],\n",
-    "                                              1 - processor_specs[qubit_list[qubit_idx]]['SSRO']['p0given1']]])\n",
-    "        simulator_noise_model.add_quantum_error(depolarization_noise_x, ['x'], [qubit_idx], warnings=False)\n",
-    "        simulator_noise_model.add_quantum_error(relaxation_noise_wait_time, ['delay'], [qubit_idx], warnings=False)\n",
-    "        simulator_noise_model.add_quantum_error(relaxation_noise_idle_time, ['idle_time'], [qubit_idx], warnings=False)\n",
+    "        epsilon_cl = 1 - (1 - processor_specs['Qubits'][qubit_list[qubit_idx]]['RB error'])**n_g\n",
+    "        depolarizing_noise = noise.kraus_error(depolarization_channel(num_qubits = 1,\n",
+    "                                                                      epsilon_cl = epsilon_cl))\n",
+    "        \n",
+    "        relaxation_noise_measurement = noise.kraus_error(relaxation_channel(temperature = processor_specs['Base temperature [K]'],\n",
+    "                                                                            qubit_freq = processor_specs['Qubits'][qubit_list[qubit_idx]]['Frequency [Hz]'],\n",
+    "                                                                            qubit_T1 = processor_specs['Qubits'][qubit_list[qubit_idx]]['T1 [s]'],\n",
+    "                                                                            time_interval = processor_specs['Measurement duration [s]']))\n",
+    "        dephasing_noise_measurement = noise.kraus_error(dephasing_channel(qubit_T2 = processor_specs['Qubits'][qubit_list[qubit_idx]]['T2 [s]'],\n",
+    "                                                                          time_interval = processor_specs['Measurement duration [s]']))\n",
+    "        readout_error = noise.ReadoutError([[1 - processor_specs['Qubits'][qubit_list[qubit_idx]]['SSRO']['p1given0'],\n",
+    "                                             processor_specs['Qubits'][qubit_list[qubit_idx]]['SSRO']['p1given0']],\n",
+    "                                             [processor_specs['Qubits'][qubit_list[qubit_idx]]['SSRO']['p0given1'],\n",
+    "                                              1 - processor_specs['Qubits'][qubit_list[qubit_idx]]['SSRO']['p0given1']]])\n",
+    "        \n",
+    "        simulator_noise_model.add_quantum_error(relaxation_noise_delay, ['delay'], [qubit_idx], warnings=False)\n",
+    "        simulator_noise_model.add_quantum_error(dephasing_noise_delay, ['delay'], [qubit_idx], warnings=False)\n",
+    "        simulator_noise_model.add_quantum_error(depolarizing_noise, ['id', 's', 'sdg', 't', 'tdg', 'x', 'rx', 'y', 'ry', 'z'], [qubit_idx], warnings=False)\n",
+    "        simulator_noise_model.add_quantum_error(relaxation_noise_measurement, ['measure'], [qubit_idx], warnings=False)\n",
+    "        simulator_noise_model.add_quantum_error(dephasing_noise_measurement, ['measure'], [qubit_idx], warnings=False)\n",
     "        simulator_noise_model.add_readout_error(readout_error, [qubit_idx])\n",
+    "        \n",
+    "    for CZ_idx in range(len(CZ_list)):\n",
+    "        \n",
+    "        epsilon_cl = 1 - (1 - processor_specs['CZ IRB errors'][CZ_list[CZ_idx]])**n_CZ\n",
+    "        depolarizing_noise_CZ = noise.kraus_error(depolarization_channel(num_qubits = 2,\n",
+    "                                                                         epsilon_cl = epsilon_cl))\n",
+    "        \n",
+    "        simulator_noise_model.add_quantum_error(depolarizing_noise_CZ, ['cz'], ast.literal_eval(CZ_list[CZ_idx]), warnings=False)\n",
+    "        simulator_noise_model.add_quantum_error(depolarizing_noise_CZ, ['cz'], ast.literal_eval(CZ_list[CZ_idx])[::-1], warnings=False) # should this be here??\n",
     "\n",
     "    return simulator_noise_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<NoiseModel on ['t', 'id', 'sdg', 'cz', 'x', 'measure', 'rx', 'tdg', 'delay', 'ry', 'z', 'y', 's']>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_noise_model(starmon_7_specs)"
    ]
   },
   {
