--- a/qi_utilities/notebook_guides/1.0_trotterization_intro.ipynb
+++ b/qi_utilities/notebook_guides/1.0_trotterization_intro.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "17135ec4",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,8 @@
     "                                                                observable_expectation_values_Z_basis)\n",
     "from qi_utilities.utility_functions.readout_correction import (split_raw_shots, extract_ro_assignment_matrix, plot_ro_assignment_matrix,\n",
     "                                                               get_ro_corrected_multi_probs)\n",
-    "from qi_utilities.utility_functions.data_handling import StoreProjectRecord"
+    "from qi_utilities.utility_functions.data_handling import StoreProjectRecord\n",
+    "from qi_utilities.device_simulation.simulators import NoisySimulator # use the simulator in case all backends are unavailable!"
    ]
   },
   {
